z-index fix

--- a/FJSHUD/app/styles/leftBar.less
+++ b/FJSHUD/app/styles/leftBar.less
@@ -36,7 +36,7 @@
        left: 5px;  
        width: 24px;  
        height: 24px; 
-       z-index: 1000;
+       z-index: 101;
        background: url("../img/XIconSet-24x24.png?v=1432149616933") no-repeat -168px -24px;
        &.favorites{              
            background: url('../img/XIconSet-24x24.png?v=1432149616933') no-repeat -284px -24px;
